# trading_bot_arena

./: .gitignore  LICENSE  README.md
api/: .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  railway-entrypoint.sh
api/alembic/: env.py
api/alembic/versions/: fc1b7806bebd_initial_trading_data_models_with_api_.py
api/database/: __init__.py  database.py  models.py
api/src/: api.py
api/src/middlewares/: api_key_middleware.py  conditional_debug_middleware.py  debug_decorator.py  debug_dependency.py  debug_middleware.py  logging_middleware.py  transform_response.py
api/src/trades/: __init__.py  api.py
api/src/trades/dto/: __init__.py  create_executed_trade_dto.py  create_order_cancellation_dto.py  create_order_dto.py  create_trade_signal_dto.py  update_executed_trade_dto.py
api/src/trades/responses/: __init__.py  executed_trade_response.py  executed_trade_summary_response.py  order_cancellation_response.py  order_response.py  trade_signal_response.py  trade_signal_summary_response.py
api/src/trades/service/: __init__.py  trades_service.py
bot/: .dockerignore  Dockerfile  README.md  __init__.py  bot.py  entrypoint.sh  pyproject.toml  test_connection.py
bot/managers/: __init__.py  database_manager.py  logging_manager.py
bot/notifications/: discord_notifier.py
bot/strategies/: README.md  __init__.py
bot/technicials/: __init__.py  adx.py  atr.py  bollinger_bands.py  cmo.py  ema.py  fvg.py  rsi.py  (+2 more)
docs/: project_structure.md
scripts/: login.sh  login_to_gateway.py  restore_sleep.sh
(+36 files in other folders)
